--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
 	width: 100px;
 	height: 200px;
 	text-align: center;
-	float:left;
+	float: left;
 	margin-left: 10px;
 	margin-right: 10px;
 	margin-bottom: 10px;
@@ -33,10 +33,11 @@
 #slotContainer {
 	border: 4px blue solid;
 	background-color: black;
-	background-image: url("Icons/slotImage.jpg");
-	background-size: 800px 600px;
+	
+	background-position: center;
+	background-size: 700px 500px;
 	background-repeat: no-repeat;
-	padding-left:5%;
+	padding-left:10px;
 	padding-right:5%;
 	padding-top: 0;
 	padding-bottom: 15px;
@@ -120,4 +121,11 @@
 #lever:hover {
 	opacity: 1;
 
+}
+
+#table {
+	width: 200px;
+	height: 400px;
+	float: left;
+	padding-right: 50px;
 }
