--- a/style.css
+++ b/style.css
@@ -10,16 +10,12 @@
 
 }
 
-.wheel-container {
-	margin: 0 auto;
-	position: inherit;
-}
 
-
-.wheel-container #wheel {
-	width: 200px;
-	height: 400px;
-	background: brown;
+#wheel {
+	background-image: url("Icons/Wheel.png");
+	background-size: 100px 200px;
+	width: 100px;
+	height: 200px;
 	text-align: center;
 	float: left;
 	margin-left: 10px;
@@ -31,29 +27,18 @@
 	font-family: "Comic Sans MS", cursive, sans-serif;
 	font-size: 12pt;
 	color: white;
-
-	box-shadow: 0 0 30px #666;
--moz-box-shadow: 0 0 30px #666;
--webkit-box-shadow: 0 0 30px #666;
- -o-box-shadow: 0 0 30px #666;
 }
 
 
 #slotContainer {
 	border: 4px blue solid;
 	background-color: black;
-<<<<<<< HEAD
 	
 	background-position: center;
 	background-size: 700px 500px;
 	background-repeat: no-repeat;
 	padding-left:10px;
 	padding-right:5%;
-=======
-	background-size: 1200px 800px;
-	padding-left:10%;
-	padding-right:10%;
->>>>>>> 54f5ff5e0f40ee0849daf8dc71ecaeb8ccc68819
 	padding-top: 0;
 	padding-bottom: 15px;
 	margin-top: 10px;
@@ -67,9 +52,17 @@
 	font-family: "Arial Black", Gadget, sans-serif;
 	font-size: 24pt;
 	color: white;
-
-
 }
+
+#wheelbox {
+
+	border-radius: 10px;
+	width: 800px;
+	height: 400px;
+	padding-top: 10px;
+	padding-bottom: 10px;
+}
+
 
 
 #description {
@@ -95,7 +88,7 @@
 	-moz-border-radius: 50px;
 	-webkit-border-radius: 50px;
 	padding-right: 5px;
-	padding-left:5px;
+	padding-left:5px; 
 	padding-top: 0;
 	border-radius: 5px;
 	font-family: "Comic Sans MS", cursive, sans-serif;
@@ -109,35 +102,25 @@
 	opacity: .9;
 }
 
-.spin-container {
-	background-color: white;
-	border-radius: 5px;
-	border-width: 5px;
-	border-style: solid;
-	border-color: #ccc;
-	height: 60px;
-
-	box-shadow: 0 0 30px #666;
--moz-box-shadow: 0 0 30px #666;
--webkit-box-shadow: 0 0 30px #666;
- -o-box-shadow: 0 0 30px #666;
-}
-.spin-container td {
-	color: black;
-	font-size: 10px;
-
+#icon {
+	width: 30px;
+	height: 30px;
 }
 
-#line {
-	border-left: thin solid #ccc;
-}
-
-#line img {
-	width: 200px;
+#lever {
+	margin-top: 100px;
+	
+	width: 80px;
 	height: 200px;
+	position: relative;
+	opacity: .9;
+
+
 }
 
-<<<<<<< HEAD
+#lever:hover {
+	opacity: 1;
+
 }
 
 #table {
@@ -146,13 +129,3 @@
 	float: left;
 	padding-right: 50px;
 }
-=======
-#spin-button {
-	width: 50px;
-	height: 50px;
-	background-color: blue;
-	border-radius: 10px;
-	color: white;
-	margin: 0 auto;
-}
->>>>>>> 54f5ff5e0f40ee0849daf8dc71ecaeb8ccc68819
