Comments to help positioning

--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@
 	padding-left:10%;
 	padding-right:10%;
 	padding-top: 0;
-	padding-bottom: 15px;
+	padding-bottom: 0;
 	margin-top: 10px;
 	margin-left: 5%;
 	margin-right: 5%;
