Lever is now submit button, but sound not working.

--- a/style.css
+++ b/style.css
@@ -135,3 +135,10 @@
 	height: 300px;
 	padding-right: 20%;
 }
+
+#leverSubmit {
+	width: 80px;
+	height: 200px;
+	position: relative;
+	opacity: .9;
+}
